[Deployment] Minimising runtime docker image